<resources>
    <string name="app_name">Chit Chat</string>
    <string name="IP_address_prompt">IP Address</string>
    <string name="Username_prompt">Username</string>
    <string name="PortNumber_prompt">Port Number</string>
    <string name="Upload_Image">Upload Image</string>
    <string name="disconnect_from_topic">Disconnect from topic</string>
    <string name="upload_file">Upload file</string>
    <string name="upload_image">Upload image</string>
    <string name="upload_story">Upload story</string>
    <string name="subscribe_to_topic">subscribe to topic</string>
    <string name="log_out">log out</string>

</resources>