<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faded_green"
    tools:context=".Activities.Connect_Activity">


    <Button
        android:id="@+id/connectbutton"
        android:layout_width="118dp"
        android:layout_height="74dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="60dp"
        android:color="@drawable/square_round_shape"
        android:text="Connect"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPort"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editIP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/IP_address_prompt"
        android:textColor="@color/black"
        android:textColorHint="#1B5E20"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editusername">

    </EditText>

    <EditText
        android:id="@+id/editPort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/PortNumber_prompt"
        android:textColor="@color/black"
        android:textColorHint="#1B5E20"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editIP">

    </EditText>

    <EditText
        android:id="@+id/editusername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="109dp"
        android:hint="@string/Username_prompt"
        android:textColor="@color/black"
        android:textColorHint="#1B5E20"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/connectbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </EditText>

</androidx.constraintlayout.widget.ConstraintLayout>